Just getting sarted working on migration

--- a/TechJobsPersistent/appsettings.json
+++ b/TechJobsPersistent/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=Tech_Jobs;password=Learn2code!;database=Tech_Jobs;"
+  }
 }
